# Mplayer

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  readme.md
include/db/: SongDatabase.h  Song_db.h  fetch_db.h  update_db.h
include/media/: BestSongs.h  MediaScanner.h  PlayController.h  QueuePlaying.h
include/shared/types/: song.h
qml/: App.qml
qml/components/cards/: EmptyUfo.qml  PlayingWindow.qml  SongCover.qml  SongElement.qml
qml/components/icons/: CircularIcon.qml  FavIcon.qml  NormalIcon.qml
qml/components/images/: RadiusImage.qml  RoundedImage.qml
qml/components/sliders/: FloatingSlider.qml
qml/components/text/: DotText.qml  SearchBar.qml  TextIcon.qml
qml/layouts/principal/: CurrentPlaying.qml  MainSection.qml  PlayControler.qml  SideBar.qml
src/backend/db/: SongDatabase.cpp  Song_db.cpp  fetch_db.cpp  update_db.cpp
src/backend/media/: BestSongs.cpp  MediaScanner.cpp  PlayController.cpp  QueuePlaying.cpp
tests/audio/: duration.cpp
tests/libtag/: libtag.cpp
tests/media/: audioScanner.cpp
